# FastAPI-Template

./: .env  .gitignore  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml
app/: main.py  models.py
app/api/: main.py
app/api/health/: controller.py
app/api/routes/: health.py
app/api/user/: controller.py
app/common/: util.py
app/core/: config.py  db.py  dependencies.py  logger.py  middleware.py
scripts/: db.py  utils.py
